--- a/style/style.css
+++ b/style/style.css
@@ -233,7 +233,8 @@ body {
     transition: transform 300ms;
 }
 
-.main__films-icon {
+.main__films-icon,
+.main__collections-icon {
     font-size: 45px;
     color: var(--white);
     margin-bottom: 12px;
@@ -273,8 +274,108 @@ body {
     transform: scale(1.3);
 }
 
-.main__films-icon:hover {
+.main__films-icon:hover,
+.main__collections-icon:hover {
     transform: rotateX(180deg) scale(1.5);
 }
 
+.section__blackwidow {
+    background: linear-gradient(90deg, #DEF7FF 0%, #F4FCFF 45.31%, rgba(255, 255, 255, 0.00) 100%);
+    padding-top: 42px;
+    padding-bottom: 80px;
+    position: relative;
+}   
+
+.main__blackwidow-text {
+    color:var(--black);
+    text-align: justify;
+    font-family: "RR";
+    font-size: 18px;
+    line-height: 27px;
+    max-width: 558px;
+    width: 100%;
+    margin:50px 0;
+}
+
+.main__blackwidow-video {
+    position: absolute;
+    right: 0;
+    top: 0;
+    z-index: -2;
+    height: 100%;
+}
+
+.main__blackwidow-film {
+    height: 100%;
+}
+
+
+.main__collections {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    gap: 30px;
+    grid-auto-rows: 200px;
+    margin-top: 50px;
+}
+
+.main__collections-item {
+    position: relative;
+    background: linear-gradient(270deg, rgba(7, 15, 25, 0.56) 0%, rgba(49, 114, 9, 0.56) 100%);
+    border-radius: 6px;
+    overflow: hidden;
+}
+
+.main__collections-img {
+    position: absolute;
+    top:0px;
+    left: 0px;
+    z-index: -2;
+    width: 100%;
+    height: 100%;
+}
+
+.main__collections-title {
+    color:var(--white);
+    font-family: "CB";
+    font-size: 20px;
+    line-height: 22px;
+    margin-top: 15px;
+    
+}
+
+.section__collections {
+    padding-top: 60px;
+    padding-bottom: 60px;
+}
+
+.main__collections-info {
+    width: 100%;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+.main__collections-info::before    {
+    content: '';
+    display: block;
+    background:url(../images/boxes.png) no-repeat;
+    width: 20px;
+    height: 90%;
+    position: absolute;
+    top: 7px;
+    left: 7px;
+}
+
+.main__collections-info::after {
+    content: '';
+    display: block;
+    background:url(../images/boxes.png) no-repeat;
+    width: 20px;
+    height: 90%;
+    position: absolute;
+    top: 7px;
+    right: 7px;
+}
 /* Main end */
