--- a/style/style.css
+++ b/style/style.css
@@ -68,6 +68,10 @@ body {
     height: 2px;
     background: var(--orange);
 }
+
+html , body {
+    scroll-behavior: smooth;
+}
 /* Root end */
 
 /* Header start */
@@ -234,7 +238,8 @@ body {
 }
 
 .main__films-icon,
-.main__collections-icon {
+.main__collections-icon,
+.section__series-icon {
     font-size: 45px;
     color: var(--white);
     margin-bottom: 12px;
@@ -275,7 +280,8 @@ body {
 }
 
 .main__films-icon:hover,
-.main__collections-icon:hover {
+.main__collections-icon:hover,
+.section__series-icon:hover {
     transform: rotateX(180deg) scale(1.5);
 }
 
@@ -366,6 +372,7 @@ body {
     position: absolute;
     top: 7px;
     left: 7px;
+    transition: transform 500ms;
 }
 
 .main__collections-info::after {
@@ -377,5 +384,112 @@ body {
     position: absolute;
     top: 7px;
     right: 7px;
+    transition: transform 500ms;
+}
+
+.main__collections-item:hover .main__collections-info::before {
+    transform: translate(-300%) scale(2.5)
+}
+
+.main__collections-item:hover .main__collections-info::after {
+    transform: translate(300%) scale(2.5)
+}
+
+.section__series-catolog {
+    margin-top: 54px;
+    margin-bottom: 63px;
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    grid-auto-rows: 185px;
+    gap:30px;
+}
+
+.section__series-item {
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    background: linear-gradient(135deg, rgba(35, 35, 35, 0.80) 0%, rgba(11, 11, 11, 0.60) 100%);
+    border-radius: 6px;
+    overflow: hidden;
+}
+
+.section__series-img{
+    position: absolute;
+    left: 0;
+    top: 0;
+    z-index: -2;
+    width: 100%;
+    height: 100%;
+    transition: transform 500ms;
+}
+
+.section__series-item:nth-of-type(6n+1) {
+    grid-column: span 4;
+    grid-row: span 2;
+    padding: 0 22px;
+}
+
+.section__series-item:nth-of-type(6n+1) .section__series-title {
+    font-size: 40px;
+    line-height: 45px;
+}
+
+.section__series-text {
+    font-size: 16px;
+    line-height: 24px;
+    font-family: "CR";
+    text-align: center;
+    color: var(--white);
+    margin: 30px 0;
+
+}
+
+.section__series-item:nth-of-type(6n+2) {
+    grid-column: span 2;
+    grid-row: span 2;
+}
+
+.section__series-title {
+    font-family: "CB";
+    font-size: 24px;
+    line-height: 27px;
+    color: var(--white);
+}
+
+.section__series-item:hover .section__series-img {
+    transform: scale(1.3);
 }
 /* Main end */
+
+/* footer start */
+.footer {
+    background: linear-gradient(90deg, #FF8C30 0%, #9F4700 100%);
+    box-shadow:0px 0px 20px rgba(0, 0, 0, 0.80);
+    padding:24px 0;
+}
+
+.footer-box {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.footer__left {
+    display: flex;
+    column-gap: 50px;
+}
+
+.footer__right-text,
+.link__to-github {
+    font-size: 18px;
+    line-height: 20px;
+    text-align: right;
+    letter-spacing: 1px;
+    color: var(--white);
+}
+
+.link__to-github{
+    font-size: 24px;
+}
