--- a/style/style.css
+++ b/style/style.css
@@ -165,6 +165,7 @@ html , body {
 }
 
 .header__content-img {
+    object-fit: cover;
     position: absolute;
     left: 0;
     top: 0;
@@ -338,6 +339,7 @@ html , body {
     z-index: -2;
     width: 100%;
     height: 100%;
+    object-fit: cover;
 }
 
 .main__collections-title {
@@ -423,6 +425,7 @@ html , body {
     width: 100%;
     height: 100%;
     transition: transform 500ms;
+    object-fit: cover;
 }
 
 .section__series-item:nth-of-type(6n+1) {
@@ -493,3 +496,72 @@ html , body {
 .link__to-github{
     font-size: 24px;
 }
+
+/* footer end */
+
+/* Media start */
+
+@media (max-width:1140px) {
+    .main__films {
+        grid-template-columns: repeat(2, 1fr);
+    }
+
+    .main__collections {
+        grid-template-columns: repeat(2, 1fr);
+    }
+}
+
+@media (max-width:800px) {
+    .section__series-item:nth-of-type(6n+2) {
+        grid-column:span 4 ;
+    }
+    .section__series-item {
+        grid-column: span 4;
+        grid-row: span 2;
+    }
+}
+
+@media (max-width: 650px) {
+    .header__nav-container {
+        flex-direction: column;
+        row-gap: 20px;
+    }
+    .header__nav {
+        padding:20px 0;
+    }
+    .header__nav-list {
+        height: auto;
+        flex-wrap: wrap;
+        justify-content: center;
+    }
+    .footer-box {
+        flex-direction: column;
+        row-gap: 30px;
+    }
+}
+
+@media (max-width:576px) {
+    .main__films,
+    .main__collections {
+        grid-template-columns: 1fr;
+    }
+
+    .main__blackwidow-img {
+        width: 100%;
+    }
+
+    .section__series-text {
+        height: 150px;
+        overflow: auto;
+    }
+    .header__content-title {
+        font-size: 30px;
+        line-height: 30px;
+    }
+    .section__series-title {
+        font-size: 30px !important;
+        line-height: 30px !important;
+    }
+}
+
+/* Media end */
